# lstm

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md
cuda_src/: foo.cu  lstm_cuda_types.h
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  debug.h  lstm.h  lstm_alloc.c  lstm_bp.c  lstm_builtin_math.c  lstm_builtin_math.h  lstm_clone.c  lstm_config.c  lstm_create.c  lstm_delete.c  lstm_file_proc.c  lstm_file_proc.h  lstm_fwcomp.c  lstm_init.c  lstm_parse.c  lstm_parse.h  lstm_print.c  lstm_print.h  lstm_private.h  lstm_pstack.c  lstm_pstack.h  lstm_state.c  lstm_str.c  lstm_str.h  lstm_strdef.c  lstm_strdef.h  lstm_training.c  lstm_types.h  lstm_xml.c  lstm_xml.h  lstm_zero.c
src_cuda/: CMakeLists.txt  lstm_alloc.cu  lstm_builtin_math.cu  lstm_builtin_math_cuda.h  lstm_clone.cu  lstm_create.cu  lstm_cuda.h  lstm_delete.cu  lstm_dump_cuda.h  lstm_fwcomp.cu  lstm_private_cuda.h  lstm_types_cuda.h
test/: CMakeLists.txt  hello.c  simple_model.lstm  test_bptt.c  test_bptt_verify.txt  test_clone.c  test_config_clone.c  test_config_clone_stable.c  test_config_cmp.c  test_config_create.c  test_config_create_stable.c  test_config_export.c  test_config_import.c  test_create.c  test_create_stable.c  test_export.c  test_fwcomp.c  test_fwcomp_erase.c  test_fwcomp_perf.c  test_fwcomp_performance.c  test_fwcomp_pref.c  test_fwcomp_stable.c  test_lstm_alloc.c  test_lstm_get_tfunc_id.c  test_lstm_run_macro.c  test_rand_network.c  test_simple_model_fwcomp.c  test_state_create.c  test_state_create_stable.c  test_state_erase.c  test_state_save.c  test_training_adder.c  test_training_exchange.c  test_xml_fread_to_end.c  test_xml_get_strlist.c  test_xml_parse.c  test_xml_parse_header.c  test_xml_parse_stable.c  test_xml_split.c
test_cuda/: CMakeLists.txt  test_clone_cuda.cu  test_create_cuda.cu  test_create_cuda_stable.cu  test_fwcomp_cuda.cu  test_fwcomp_cuda_perf.cu  test_fwcomp_cuda_performance.cu  test_fwcomp_cuda_pref.cu  test_tfunc_cuda.cu
